--- a/src/net/abesto/jstuki/ui/ActionsPanel.form
+++ b/src/net/abesto/jstuki/ui/ActionsPanel.form
@@ -16,7 +16,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
+          <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jScrollPane1" alignment="0" pref="353" max="32767" attributes="0"/>
@@ -30,6 +30,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnMoveDown" min="-2" max="-2" attributes="0"/>
                   </Group>
+                  <Component id="btnToIteration" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -48,7 +49,9 @@
                   <Component id="btnMoveUp" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btnMoveDown" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="142" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="btnToIteration" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="111" max="32767" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="78" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -97,5 +100,13 @@
         </Component>
       </SubComponents>
     </Container>
+    <Component class="javax.swing.JButton" name="btnToIteration">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Iteration"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnToIterationActionPerformed"/>
+      </Events>
+    </Component>
   </SubComponents>
 </Form>
